# sample-domi-contracts

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/client/: hello_world.ts  main.ts  utils.ts
src/program-rust/: Cargo.toml
src/program-rust/src/: domichain_program.rs
src/program-wasm/: Cargo.toml
src/program-wasm/src/: domichain_program.rs  lib.rs  main.rs  write_to.rs
src/program-wat/: Cargo.toml
src/program-wat/src/: main.rs
