
[package]
name = "domichain-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

# [dependencies]
# borsh = "0.9.3"
# borsh-derive = "0.10.0"
# solana-program = "=1.10.35"
# solana-frozen-abi = "=1.10.35"
# solana-frozen-abi-macro = "=1.10.35"

# [dev-dependencies]
# solana-program-test = "~1.10.35"
# solana-sdk = "~1.10.35"
# getrandom = { version = "0.1.14", features = ["dummy"] }
# getrandom02 = { version = "0.2.2", features = ["custom"], package = "getrandom" }
# rayon-core = "1.9.1"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
opt-level = 'z'